<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="module_connectivity_label">Connectivity module</string>
    <string name="module_connectivity_desc">Connection type, public IP, network details</string>
    <string name="module_connectivity_type_wifi_label">WiFi</string>
    <string name="module_connectivity_type_cellular_label">Cellular</string>
    <string name="module_connectivity_type_ethernet_label">Ethernet</string>
    <string name="module_connectivity_type_none_label">No connection</string>
    <string name="module_connectivity_unknown_public_ip_label">Unknown public IP</string>
    <string name="module_connectivity_unknown_local_ip_label">Unknown local IP</string>
    <string name="module_connectivity_detail_local_ipv4_label">Local IPv4</string>
    <string name="module_connectivity_detail_local_ipv6_label">Local IPv6</string>
    <string name="module_connectivity_detail_gateway_label">Gateway</string>
    <string name="module_connectivity_detail_dns_label">DNS servers</string>
    <string name="module_connectivity_detail_public_ip_label">Public IP</string>
    <string name="module_connectivity_detail_connection_type_label">Connection type</string>
    <string name="module_connectivity_status_connected_label">Connected</string>
    <string name="module_connectivity_status_disconnected_label">Disconnected</string>

    <string name="module_connectivity_widget_description">Display network information from your synced devices.</string>
    <string name="module_connectivity_widget_copy_action">Copy network addresses</string>
    <string name="module_connectivity_widget_copied_toast">Copied addresses</string>
</resources>
